# datomic-py

./: .gitignore  README.md  pyproject.toml
.claude/: ralph-loop.local.md
.github/workflows/: tests.yml
datomic_py/: __init__.py  async_datomic.py  datomic.py  exceptions.py  schema.py
datomic_py/edn/: __init__.py  datetime_utils.py  reader.py  tags.py  types.py  writer.py
datomic_py/serialization/: __init__.py  converters.py  factories.py  models.py  pydantic_support.py  registry.py
pydatomic/: __init__.py  async_datomic.py  datomic.py  dockerfile.Datomic  edn.py  exceptions.py  schema.py  testcontainer.py
pydatomic/edn/: __init__.py  datetime_utils.py  reader.py  tags.py  writer.py
tests/: conftest.py  test_async_datomic.py  test_async_integration.py  test_datomic.py  test_edn.py  test_integration.py  test_schema.py  test_serialization.py  test_serialization_integration.py
tests/testcontainer/: __init__.py  container.py  dockerfile.Datomic
